--- a/html/API.html
+++ b/html/API.html
@@ -4,8 +4,10 @@
     </head>
     <body>
     	Test Body.
-    	<br/><br/><br/>
+    	<br/><br/>
     	Can you read this Jun?
+    	<br/>
+    	<img src="img/bcg_slide-1.jpg">
 
     </body>
 </html>
